fixed the alignment for drop downs

--- a/app/public/stylesheets/transaction_list.css
+++ b/app/public/stylesheets/transaction_list.css
@@ -61,13 +61,17 @@ h1 {
 	display: none;
 	position: absolute;
 	top: 4.5vh;
-	left: 5vw;
+	left: 4vw;
 	background-color: white;
 
 	-webkit-box-shadow: 3px 29px 63px 4px rgba(0,0,0,0.1);
 	-moz-box-shadow: 	3px 29px 63px 4px rgba(0,0,0,0.1);
 	box-shadow: 		3px 29px 63px 4px rgba(0,0,0,0.1);
 	border-radius: 4px;
+}
+
+#sortingDD.dd-quad {
+	left: 7.5vw;
 }
 
 #sortingDD > div {
@@ -106,7 +110,7 @@ h4 {
 	display: none;
 	position:absolute;
 	top: 4.5vh;
-	left: 7.5vw;
+	left: 6.5vw;
 
 	background-color: white;
 
@@ -114,6 +118,10 @@ h4 {
 	-moz-box-shadow: 	3px 29px 63px 4px rgba(0,0,0,0.1);
 	box-shadow: 		3px 29px 63px 4px rgba(0,0,0,0.1);
 	border-radius: 4px;
+}
+
+#filteringDD.dd-quad {
+	left: 10vw;
 }
 
 #filtering:hover > #filteringDD {
@@ -227,8 +235,12 @@ li > div {
 	display: flex;
 	flex-direction: column;
 	position: absolute;
-	right: 22vw;
+	right: 23.5vw;
 	border: 1px solid rgb(247, 240, 240);
+}
+
+.options.options-quad {
+	right: 16vw;
 }
 
 .options > a {
